# rpi_mpu6050_dmp

./: CMakeLists.txt  README.md  helper_3dmath.h  main.cpp  sensor.cpp  sensor.h  test.py
i2cdev/: i2cdev.h
inv_mpu/: inv_mpu.c
motion/: sensor.cpp
motion/i2cdev/: i2cdev.c
motion/inv_mpu/: inv_mpu.h  inv_mpu_dmp_motion_driver.h
